# owlmixin

./: .codeclimate.yml  .editorconfig  .gitignore  .pylintrc  .pypirc  .style.yapf  .travis.yml  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  release.sh  requirements.txt  setup.py
.github/workflows/: release.yaml  tests.yaml
dictmixin/: __init__.py  dictutil.py  main.py
docs/: Makefile  api.rst  conf.py  genindex.html  index.html  index.rst  make.bat  objects.inv  owlmixin.rst  search.html  searchindex.js
docs/_modules/: index.html  owlmixin.html
docs/_modules/owlmixin/: errors.html  owlcollections.html  owlenum.html  owloption.html  transformers.html
docs/_sources/: index.rst.txt
docs/_sources/api/: errors.rst.txt  owlcollections.rst.txt  owlenum.rst.txt  owlmixin.rst.txt  owloption.rst.txt  test-setup.rst.txt
docs/_static/: documentation_options.js  epub.css  pyramid.css
docs/api/: collections.rst  errors.html  owlcollections.html  owlenum.html  owlenum.rst  owlmixin.html  owlmixin.rst  owloption.html  test-setup.html  test-setup.rst  transformers.rst
jsonmixin/: __init__.py  main.py
owlmixin/: __init__.py  collections.py  dictutil.py  errors.py  owlcollections.py  owlenum.py  owloption.py  samples.py  transform.py  transformers.py  util.py
sphinx-docs/: conf.py  make.bat
sphinx-docs/api/: owlcollections.rst  owlenum.rst  owlmixin.rst
tests/: test_Exist.py  test_Option.py  test_OwlMixin.py  test_OwlObjectEnum.py  test_TDict.py  test_TIterator.py  test_TList.py  test_TOption.py  test__init__.py  test_dictutil.py  test_main.py  test_util.py
tests/csv/: animals_shiftjis.csv  animals_tab_separated.csv  animals_with_header.csv  animals_without_header.csv  papers_shiftjis.csv  papers_tab_separated.csv  papers_with_header.csv  papers_without_header.csv
tests/json/: human_shiftjis.json  human_utf8.json  spots_shiftjis.json  spots_utf8.json
tests/yaml/: human_shiftjis.yaml  human_utf8.yaml  spots_shiftjis.yaml  spots_utf8.yaml
