[tool.poetry]
name = "owlmixin"
version = "6.0.0"
description = "Mixin which converts ``data class instance`` and others each other more simple."
authors = ["tadashi-aikawa <syou.maman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tadashi-aikawa/owlmixin"
repository = "https://github.com/tadashi-aikawa/owlmixin"
documentation = "https://tadashi-aikawa.github.io/owlmixin/"
keywords = ["dict", "json", "yaml", "parser", "mixin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
sphinx = "^5.0"
pytest = "^7.2"
mock = "^3.0"
pytest-cov = "^4.0"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

