[tool.poetry]
name = "owlmixin"
version = "6.2.1"
description = "Mixin which converts ``data class instance`` and others each other more simple."
authors = ["tadashi-aikawa <syou.maman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tadashi-aikawa/owlmixin"
repository = "https://github.com/tadashi-aikawa/owlmixin"
documentation = "https://tadashi-aikawa.github.io/owlmixin/"
keywords = ["dict", "json", "yaml", "parser", "mixin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
sphinx = "^5.0"
pytest = "^7.2"
mock = "^3.0"
pytest-cov = "^4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"

[tool.ruff.lint]
# import順を最適化
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

